# fastapi-chat-project

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: .env  .env.local  Dockerfile  docker-compose.yml  main.py
src/app/: api.py  container.py  main.py
src/app/auth/: container.py  repository.py  views.py
src/app/celery_task/: __init__.py
src/app/celery_task/tasks/: chat.py  log.py
src/app/core/: config.py
src/app/core/db/: __init__.py  create_session.py  session.py  transactional.py
src/app/core/enums/: __init__.py
src/app/core/exceptions/: __init__.py  base.py  token.py
src/app/core/fastapi/: deps.py  pydantic_models.py
src/app/core/middlewares/: __init__.py  authentication.py  sqlalchemy.py
src/app/core/utils/: camelcase.py  token_helper.py
src/app/domain/auth/: container.py  models.py  repositorys.py  service.py  services.py  views.py
src/app/domain/chat/: container.py  models.py  repositorys.py  services.py  util.py  views.py
src/app/domain/log/: container.py  (+2 more)
src/app/user/: container.py  models.py  service.py  views.py
src/core/: config.py
src/core/db/: __init__.py  create_session.py  session.py
src/core/exceptions/: __init__.py
src/core/middlewares/: authentication.py  sqlalchemy.py
src/gunicorn/: gunicorn.config.py
src/migrations/: env.py
src/migrations/versions/: 301373836c32_create_user_table.py  aff4066b3991_create_log_table.py  eb9310f1f9b0_chat.py
src/scripts/: start.sh
src/templates/: chat.html  chat_main.html  chat_select.html  join.html  login.html
tests/: .env.test  conftest.py
tests/domain/auth/: test_view.py
tests/domain/user/: test_view.py
(+14 files in other folders)
