[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.poetry]
name = "fastapi-chat-project"
version = "0.1.0"
description = ""
authors = ["ksm4850 <ksm4850@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.1"
pydantic-core = "^2.14.5"
pydantic-settings = "^2.1.0"
pydantic = "^2.10.0"
python-dotenv = "^1.0.1"
fastapi = "0.108.0"
asyncpg = "^0.30.0"
jwt = "^1.3.1"
dependency-injector = "^4.43.0"
bcrypt = "^4.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

