[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["ksm4850 <ksm4850@gmail.com>"]
description = ""
name = "fastapi-chat-project"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
asyncpg = "^0.30.0"
bcrypt = "^4.2.1"
dependency-injector = "^4.43.0"
fastapi = "0.108.0"
pydantic = "^2.10.0"
pydantic-core = "^2.14.5"
pydantic-settings = "^2.1.0"
python = "^3.11"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.1"
pyjwt = "^2.10.0"
orjson = "^3.10.12"
gunicorn = "^23.0.0"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^4.0.1"
toml-sort = "^0.24.2"
